--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   get: ^4.6.5
   http: ^0.13.5
+  firebase_core: 2.13.1
+  cloud_firestore: 4.8.0
 
 dev_dependencies:
   flutter_test:
