--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   firebase_core: 2.13.1
   cloud_firestore: 4.8.0
+  flutter_fast_forms: ^11.0.0
 
 dev_dependencies:
   flutter_test:
